tests/outref/TSC04.ref
OCTO> SELECT invalid FROM names;
[ERROR] PATH:LINENUM DATE TIME : Unknown column: INVALID
Error with syntax near (line 1, column 7):

SELECT invalid FROM names;
       ^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT invalid FROM names;

OCTO> 
